--- a/first/css/login.css
+++ b/first/css/login.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("reset.css");
+@import url("media-grids.css");
 
 /* body {
 
@@ -106,7 +107,7 @@ a.signup:hover {
   text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 576px) {
   hr {
     margin: 10px 0 0 0;
   }
@@ -136,13 +137,13 @@ a.signup:hover {
   }
 }
 
-@media only screen and (min-width:601px) and (max-width:900px) { 
+@media only screen and (min-width:576px) { 
   .login-form {
     min-width: 50%;
   }
 }
 
-@media only screen and (min-width:901px) {
+@media only screen and (min-width:900px) {
   .login-form {
     min-width: 450px;
   }
