--- a/first/css/login.css
+++ b/first/css/login.css
@@ -77,12 +77,6 @@ input:focus {
   cursor: pointer;
 }
 
-#login:active {
-  color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-}
-
 .login-cover {
   text-align: center;
 }
@@ -143,6 +137,18 @@ a.signup:hover {
 
   h3 {
     font-size: 25px;
+  }
+
+  input {
+    padding: 5px 5px 3px 5px;
+  }
+
+  input::placeholder {
+    font-size: 17px;
+  }
+
+  #login {
+    font-size: 17px;
   }
 }
 
